syntax = "proto3";
option go_package="./;proto";
package proto;

service RemoteUser {
  rpc GetUserInfo (RequestGetUserInfo) returns (ResponseGetUserInfo){}
  rpc GetUserInfoByNickname(RequestGetUserInfoByNickname) returns (ResponseGetUserInfoByNickname){}
}

message RequestGetUserInfo {
  string Id =1;
}

message ResponseGetUserInfo{
  string Id =1;
  string Nickname =2;
}

message  RequestGetUserInfoByNickname{
  string Nickname =1;
}
message ResponseGetUserInfoByNickname{
  string Id =1;
  string Nickname =2;
  string Password =3;
}